--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First Repo</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Hello, This is my first repo.</h1>
+    <h2>This is the second h1</h2>
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam aliquid
       aperiam quod neque itaque possimus a, corrupti asperiores qui ipsum, earum
